Fix long words in code blocks in titles (#7340)
Avoiding long words from overlapping the sidebar on desktop

--- a/src/scss/next.scss
+++ b/src/scss/next.scss
@@ -395,6 +395,7 @@ h6 code,
   margin: 0;
   padding: 0;
   white-space: normal;
+  word-break: break-all;
 }
 
 /// Sub and sup
